@@ -1,3 +1,13 @@
+2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/labyrinth.py
+	Minor cleanups like indentation.
+
+2008-04-19 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MainWindow.py
+	Small refactorizations.
+
 2008-04-14 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* help/
